# bugfree-octo-shame

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  list.c  list.h  main.c  main.cpp
test/: CMakeLists.txt  test_create.c  test_destroy.c  test_push_pop.c  test_remove.c
